--- a/Local produce input.html
+++ b/Local produce input.html
@@ -197,7 +197,7 @@
                                                 </li> -->
                                                 <li class="align"><label>Qty, Tonnes(1000kg):</label>
                                                     <input type="text" name="quantity" id="qty"
-                                                        placeholder="*Qty Purchased in Tonnes(1000kg)" required
+                                                        placeholder="*Qty collected from Farm in Tonnes(1000kg)" required
                                                         oninput="add_number()" />
                                                 </li>
                                                 <!-- <li class="align"><label>Total Amount (shs):</label>
@@ -206,7 +206,7 @@
                                                 </li> -->
                                                 <li class="align"><label>Comments:</label>
                                                     <textarea type="text" name="comments"
-                                                        placeholder="*Comments on Produce" id="comments" rows="5"
+                                                        placeholder="*Comments on Produce harvested" id="comments" rows="5"
                                                         cols="33"></textarea>
                                                 </li>
                                             </ul>
