--- a/account.html
+++ b/account.html
@@ -163,9 +163,9 @@
                                                     <input type="text" name="gender" placeholder="*Male / Female"
                                                         disabled />
                                                 </li>
-                                                <li class="align"><label>NIN:</label>
+                                                <li class="align"><label>National ID Number:</label>
                                                     <input type="text" name="userid2" id="nin"
-                                                        placeholder="* National Id Number (NIN)" disabled />
+                                                        placeholder="*NIN" disabled />
                                                 </li>
                                                 <li class="align"><label>E-mail:</label>
                                                     <input type="email" name="email" placeholder="* Email-address"
