--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
       </div>
       <div class="col col-md-5">
-        <div class="main" style="background-color: #484c55;">
+        <div class="main" style="background-color: #5d5961;">
           <input type="checkbox" id="chk" aria-hidden="true">
           <div class="signup">
             <form>
