--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <form>
               <label for="chk" aria-hidden="true">Sign up</label>
               <ul>
-                <h5> Please continue to the sign Up page by clicking the button below
+                <h5> Please continue to the sign Up page by clicking the button below .
                 </h5>
                 <P>* Terms and Conditions Apply *</P>
               </ul>
