--- a/accounts.html
+++ b/accounts.html
@@ -9,12 +9,11 @@
     <title>Karibu Groceries Ltd/purchases</title>
 
     <!-- Bootstrap CSS CDN -->
-    <link href="css/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
         integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     Our Custom CSS -->
     <link rel="stylesheet" href="css/style5.css">
-
+    <link href="css/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
         integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
@@ -38,23 +37,25 @@
 
             <ul class="list-unstyled components" style="font-size: 19px;">
                 <li>
-                    <a href="#" aria-expanded="false" class="dropdown-toggle">
+                    <a href="#" aria-expanded="false" style="color:rgb(255, 255, 255);text-decoration:none;">
                         <i class="fas fa-home"></i>
                         Home
                     </a>
                 </li>
 
                 <li>
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <a href="#pageSubmenu" data-toggle="collapse" style="color:rgb(255, 255, 255);text-decoration:none;"
+                        aria-expanded="false" class="dropdown-toggle">
                         <i class="fas fa-copy"></i>
                         Purchases
                     </a>
                     <ul class="collapse list-unstyled " id="pageSubmenu">
                         <li>
-                            <a href="Produce purchases.html">Supplier</a>
+                            <a href="Produce purchases.html"
+                                style="color:rgb(255, 255, 255);text-decoration:none;">Supplier</a>
                         </li>
                         <li>
-                            <a href="#">Farm supply</a>
+                            <a href="#" style="color:rgb(255, 255, 255);text-decoration:none;">Farm supply</a>
                         </li>
 
                     </ul>
@@ -66,26 +67,26 @@
                     </a>
                 </li> -->
                 <li class="active">
-                    <a href="sales input.html" style="color:#181553">
+                    <a href="sales input.html" style="color:#181553;text-decoration:none;">
                         <i class="fas fa-copy"></i>
                         Sales
                     </a>
 
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" style="color:rgb(255, 255, 255);text-decoration:none;">
                         <i class="fas fa-briefcase"></i>
                         About
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" style="color:rgb(255, 255, 255);text-decoration:none;">
                         <i class="fas fa-paper-plane"></i>
                         Contact
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" style="color:rgb(255, 255, 255);text-decoration:none;">
                         <i class="fas fa-user"></i>
                         Account
                     </a>
@@ -120,18 +121,17 @@
                     </div>
                 </div>
             </nav>
-            <div class="container-fluid" id="blog-container">
+            <!-- <div class="container-fluid" id="blog-container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="main custom1">
-                            <h2 class="txt1" style="font-size:45px;text-decoration: underline;"> Customer Sales Form
-                            </h2>
+                            <h2 class="txt1" style="font-size:45px;text-decoration: underline;"> Sales Form</h2>
                             <div class="signup">
                                 <div class="row" onsubmit="">
                                     <div class=" col col-md-6">
-                                        <form class="needs-validation" name="registration" novalidate>
+                                        <form name="registration">
                                             <ul>
-                                                <li class="align"><label class="form-label">KGL Branch:</label>
+                                                <li class="align"><label>KGL Branch:</label>
                                                     <select name="urole" onblur="role()">
                                                         <option value="Default"> KGL Branch
                                                         </option>
@@ -139,15 +139,15 @@
                                                         <option value="ma">MATUGGA Branch</option>
                                                     </select>
                                                 </li>
-                                                <li class="align"><label class="form-label">Customer Name:</label>
+                                                <li class="align"><label>Customer Name:</label>
                                                     <input type="text" name="coname" placeholder="*Customer Name "
                                                         required size="32" onblur="usernam(0,20)" />
                                                 </li>
-                                                <li class="align"><label class="form-label">Phone Contact:</label>
+                                                <li class="align"><label>Phone Contact:</label>
                                                     <input type="text" name="telno" placeholder="* Telephone no."
                                                         required onblur="tel()" />
                                                 </li>
-                                                <li class="align"><label class="form-label">Product:</label>
+                                                <li class="align"><label>Product:</label>
                                                     <select name="pdct" onblur="role1()">
                                                         <option value="Default">Agricultural Product
                                                         </option>
@@ -160,7 +160,7 @@
 
                                                     </select>
                                                 </li>
-                                                <li><label for="start" class="form-label">Purchase Date:</label>
+                                                <li><label for="start">Purchase Date:</label>
                                                     <input type="date" name="trip-start" value="" min="1960-01-01"
                                                         max="2100-12-31">
                                                 </li>
@@ -168,28 +168,23 @@
                                         </form>
                                     </div>
                                     <div class=" col col-md-6">
-                                        <form class="needs-validation" name="registration" novalidate>
+                                        <form name="registration">
                                             <ul>
-                                                <li>
-                                                    <div class="align"><label class="form-label">Unit price
-                                                            (shs):</label>
-                                                        <input type="text" name="unitprice" id="unitprice"
-                                                            placeholder="*Unit Price /kg (shs)." required size="12"
-                                                            id="nin" oninput="add_number()" />
-                                                        <div class="invalid-feedback">
-                                                            Please enter a valid email address for shipping updates.
-                                                        </div>
-                                                    </div>
+                                                <li class="align"><label>Unit price (shs):</label>
+                                                    <input type="text" name="unitprice" id="unitprice"
+                                                        placeholder="*Unit Price per kg (shs)." required size="12"
+                                                        id="nin" oninput="add_number()" />
                                                 </li>
-                                                <li class="align"><label class="form-label">Qty, Tonnes(1000kg):</label>
+                                                <li class="align"><label>Qty, Tonnes(1000kg):</label>
                                                     <input type="text" name="quantity" id="qty"
-                                                        placeholder="*Qty in Tonnes." required oninput="add_number()" />
+                                                        placeholder="*Qty in Tonnes." required
+                                                        oninput="add_number()" />
                                                 </li>
-                                                <li class="align"><label class="form-label">Total Amount (shs):</label>
+                                                <li class="align"><label>Total Amount (shs):</label>
                                                     <input type="text" name="TextBox3" placeholder="*Amount(shs)."
                                                         disabled id="txtresult" />
                                                 </li>
-                                                <li class="align"><label class="form-label"> Sale Type:</label>
+                                                <li class="align"><label> Sale Type:</label>
                                                     <select name="sale" onblur="role2()">
                                                         <option value="Default"> Sale type.
                                                         </option>
@@ -197,7 +192,7 @@
                                                         <option value="cr">Credit</option>
                                                     </select>
                                                 </li>
-                                                <li class="align"><label class="form-label">Comments:</label>
+                                                <li class="align"><label>Comments:</label>
                                                     <textarea type="text" name="comments"
                                                         placeholder="*Comments on Sale." id="comments" rows="5"
                                                         cols="33"></textarea>
@@ -205,17 +200,108 @@
                                             </ul>
                                         </form>
                                     </div>
-
+                                    
                                 </div><button style="width: 40%;margin-top: 0px;
-                                height:50px;" class="custom" type="submit">Confirm Sale</button>
+                                height:50px;" class="custom">Confirm Sale</button>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div> -->
+            <div class="main custom1">
+                <div class="row">
+                    <div class="col-md-12">
+                        <form class="needs-validation" name="registration" novalidate>
+                            <div class="row g-3" style="padding:20px;">
+
+                                <div class="col-md-6">
+                                    <label for="firstName" class="form-label">First name</label>
+                                    <input type="text" id="firstName" placeholder="" value=""
+                                        required>
+                                    <div class="invalid-feedback">
+                                        Valid first name is required.
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <label  class="form-label">Last name</label>
+                                    <input type="text"  id="lastName" placeholder="" value=""
+                                        required>
+                                    <!-- <div class="invalid-feedback">
+                                        Valid last name is required.
+                                    </div> -->
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <label for="email" class="form-label">Email </label>
+                                    <input type="email" id="email" placeholder="you@example.com"
+                                        required>
+                                    <div class="invalid-feedback">
+                                        Please enter a valid email address for shipping updates.
+                                    </div>
+                                </div>
+                                <div class=" col-sm-6"><label for="email" class="form-label">Unit price (shs):</label>
+                                    <input type="text" name="unitprice" id="unitprice"
+                                        placeholder="*Unit Price per kg (shs)." required size="12" id="nin" type="text"
+                                        class="form-control" oninput="add_number()" />
+                                    <div class="invalid-feedback">
+                                        Please enter a valid email address for shipping updates.
+                                    </div>
+                                </div>
+
+                                <div class=" col-sm-6"><label for="email" class="form-label">Qty,
+                                        Tonnes(1000kg):</label>
+                                    <input type="text" name="quantity" id="qty" placeholder="*Qty in Tonnes." required
+                                        class="form-control" oninput="add_number()" />
+                                    <div class="invalid-feedback">
+                                        Please enter a valid email address for shipping updates.
+                                    </div>
+                                </div>
+                                <div class=" col-sm-6"><label for="email" class="form-label">Total Amount (shs):</label>
+                                    <input type="text" class="form-control" name="TextBox3" placeholder="*Amount(shs)."
+                                        disabled id="txtresult" />
+                                </div>
+                                <div class=" col-sm-6"><label for="email" class="form-label"> Sale Type:</label>
+                                    <select name="sale" onblur="role2()" class="form-control" data-toggle="collapse"
+                                        aria-expanded="false" class="dropdown-toggle">
+                                        <option value="Default"> Sale type.
+                                        </option>
+                                        <option value="ca">Cash</option>
+                                        <option value="cr">Credit</option>
+                                    </select>
+                                    <div class="invalid-feedback">
+                                        Please enter a valid email address for shipping updates.
+                                    </div>
+                                </div>
+                                <div class=" col-sm-6"><label for="email" class="form-label">Comments:</label>
+                                    <textarea class="form-control" type="text" name="comments"
+                                        placeholder="*Comments on Sale." id="comments" rows="5" cols="33"></textarea>
+                                    <div class="invalid-feedback">
+                                        Please enter a valid email address for shipping updates.
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="custom row" float="right"> <button style="width: 40%;margin-top: 0px;height:50px;"
+                                    type="submit" class="">Confirm
+                                    Sale</button></div>
+                            <!-- <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="save-info">
+                        <label class="form-check-label" for="save-info">Save this information for next time</label>
+                      </div> -->
+
+
+                            <!-- <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button> -->
+                        </form>
+                    </div>
+                </div>
             </div>
+
+
         </div>
+
     </div>
-    <footer class="page-footer font-small blue pt-4 ">
+    <!-- <footer class="page-footer font-small blue pt-4 ">
         <div class="container-fluid text-center text-md-left ">
             <div class="row">
                 <div class="col-md-2 mt-md-0 mt-3">
@@ -224,16 +310,19 @@
                             style="width:50px; height:50px; border-radius: 10px;" alt="Me In Class on Day on3">
                     </div>
                 </div>
-                <div class=" col-md-10 mt-md-0 mt-3 footer-copyright text-center py-3 textcontent">© 2022 Copyright:
+                <div class=" col-md-10 mt-md-0 mt-3 footer-copyright text-center py-3 textcontent">© 2022
+                    Copyright:
                     Karibu Groceries LTD
                 </div>
 
             </div>
         </div>
-    </footer>
+    </footer> -->
 
 
-    <script src="js/sales.js"></script>
+    <script src="css/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="js/form-validation.js"></script>
+    <!-- <script src="js/sales.js"></script> -->
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -246,13 +335,15 @@
     <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
         integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
         crossorigin="anonymous"></script> -->
-    <script src="css/bootstrap/js/bootstrap.bundle.min.js"></script>
+
     <script type="text/javascript">
         $(document).ready(function () {
             $('#sidebarCollapse').on('click', function () {
                 $('#sidebar').toggleClass('active');
             });
         });
+
+
     </script>
 
 </body>
