--- a/Local produce input.html
+++ b/Local produce input.html
@@ -108,40 +108,30 @@
         <div id="content">
 
             <nav class="navbar navbar-expand-lg navbar-light " style="background:#efeef0">
-                <div class="container-fluid">
-
-                    <button type="button" id="sidebarCollapse" class="btn btn-primary" style="background:#181553">
-                        <i class="fas fa-align-left"></i>
-                        <!-- <span> Sidebar</span> -->
-                    </button>
-                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
-                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="fas fa-align-justify"></i>
-                    </button>
-                    <div>
-                        <h2 style="margin-left:15px;margin-top: 20px;">Karibu Groceries Ltd, FARM PRODUCT FORM</h2>
+                <div class="container-fluid row">
+                    <div class="col-md-11 row">
+                        <div class="col-md-1">
+                            <button type="button" id="sidebarCollapse" class="btn btn-primary"
+                                style="background:#181553">
+                                <i class="fas fa-align-left"></i>
+                            </button>
+                            <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button"
+                                data-toggle="collapse" data-target="#navbarSupportedContent"
+                                aria-controls="navbarSupportedContent" aria-expanded="false"
+                                aria-label="Toggle navigation">
+                                <i class="fas fa-align-justify"></i>
+                            </button>
+                        </div>
+                        <div  class="col-md-10">
+                            <h2 style="margin-left:15px;margin-top: 20px;">Karibu Groceries Ltd, PRODUCT SALES FORM</h2>
+                        </div>
                     </div>
-
-
-
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="nav navbar-nav ml-auto">
-
+                    <div class="collapse navbar-collapse col-md-1" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav ml-auto ">
                             <li class="nav-item active">
                                 <button class="btn btn-outline-primary"><a class="nav-link" href="index.html"
-                                        style="color:#000000">LogOut</a></button>
+                                        style="color:#000000; " class="custom">LogOut</a></button>
                             </li>
-
-                            <!-- <li class="nav-item">
-                                <a class="nav-link" href="#">Page</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Page</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Page</a>
-                            </li> -->
                         </ul>
                     </div>
                 </div>
