--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <div class="col-md-4 mt-md-0 mt-4 ">
         <!-- <h3 class=" tx2" style=" margin-left: 30px;margin-top: 30px;">Karibu Groceries Limited</h3> -->
 
-        <h1 class=" txt1" style=" margin-left: 30px;">Karibu Groceries Limited
+        <h1 class=" txt1" style=" margin-left: 30px; ">Karibu Groceries Limited
         </h1>
-        <h3 class=" txt2" style=" margin-left: 30px;">"FEEDING THE NATION."
+        <h3 class=" txt2" style=" margin-left: 30px; ">"FEEDING THE NATION."
         </h3>
         <div>
           <img src="./Img/logo5.jpg" class="card-img-top d-none d-md-block" style="width:200px; height:200px; 	
@@ -52,7 +52,7 @@
         </div>
       </div>
       <div class="col col-md-5">
-        <div class="main" style="background-color: #5d5961;">
+        <div class="main" style="background-color: #6d6b70;">
           <input type="checkbox" id="chk" aria-hidden="true">
           <div class="signup">
             <form>
