--- a/signup.html
+++ b/signup.html
@@ -1,146 +1,166 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="css/signup.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
-    <title> Karibu Groceries LTD.</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="css/bootstrap/css/bootstrap.css" rel="stylesheet" />
+  <link href="css/signup.css" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet" />
+  <title>Karibu Groceries LTD.</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
-            <li class="nav-item">
-                <img src="./Img/logo5.jpg" style="width:60px; height:60px; border-radius: 3px; background-color: #ddd;">
-            </li><br><br><br>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <P class="nav-link active nav1" aria-current="page">Karibu Groceries Limited .</P>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <button class="btn btn-outline-primary txt2" style="float: left; height: 50px;" type="submit">
-                        <a href="index.html" style="text-decoration:none; color:azure">Home</a></button>
-                </form>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container" id="blog-container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="main custom1">
-                    <h2 class="txt1"> Sign up Page</h2>
-                    <div class="signup">
-                        <div class="row ">
-                            <div class=" col col-md-6">
-                                <form name="registration" onsubmit="">
-                                    <ul>
-                                        <li class="align"><label>1st Name</label>
-                                            <input type="text" name="fname" placeholder="* First Name " required
-                                                size="22" onblur="userval(5,22)" />
-                                        </li>
-                                        <li class="align"><label>2nd Name</label>
-                                            <input type="text" name="sname" placeholder="* Second Name" required
-                                                size="22" onblur="userval1(5,22)" />
-                                        </li>
-                                        <li class="align"><label>Gender</label>
-                                            <input type="text" name="gender" placeholder="*Male / Female" required
-                                                size="7" id="gndr" onblur="userval5(3,8)" />
-                                        </li>
-                                        <li class="align"><label>NIN</label>
-                                            <input type="text" name="userid2" placeholder="* National Id Number (NIN)"
-                                                required size="12" id="nin" onblur="userval2(5,12)" />
-                                        </li>
-                                        <li class="align"><label>E-mail</label>
-                                            <input type="email"
-                                                pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$"
-                                                name="email" placeholder="* Email-address" required id="email" />
-                                        </li>
-                                        <li class="align"><label>User role</label>
-                                            <select name="urole" onblur="role()">
-                                                <option value="Default">Please select a Role </option>
-                                                <option value="sa">Sales Agent</option>
-                                                <option value="ma">Manager</option>
-                                                <option value="dr">Director</option>
-
-                                            </select>
-                                        </li>
-
-                                    </ul>
-                                </form>
-                            </div>
-                            <div class="col col-md-6">
-                                <form name="registration2" onsubmit="">
-                                    <ul>
-
-
-                                        <li class="align"><label>Username</label>
-                                            <input type="text" name="usrname" required="" placeholder="* User name"
-                                                size="22" onblur="userval4(5,22)" />
-                                        </li>
-
-                                        <li class="align"><label>Tel.</label>
-                                            <input type="text" required="" placeholder="* Telephone no." name="telno"
-                                                onblur="tel()" />
-                                        </li>
-                                        <li class="align"><label>Password</label>
-                                            <input type="password" required="" placeholder="* Password" name="passid"
-                                                size="12" onblur="userpass(6,20)" />
-                                        </li>
-                                        <li class="align"><label>Confirm Password*</label>
-                                            <input type="password" required="" placeholder="* Confirm Password"
-                                                name="passid1" size="12" onblur="userpass1(6,20),passvali()" />
-                                        </li>
-                                        <li class="align"><label>Branch</label>
-                                            <select name="branch" onblur="sbranch()" required>
-                                                <option value="Default">Please select a Branch </option>
-                                                <option value="mg">Maganjo</option>
-                                                <option value="ma">Matugga</option>
-                                                <option value="na">Not Applicable</option>
-
-                                            </select>
-                                        </li>
-
-                                    </ul>
-                                </form>
-                            </div>
-                            <button style="width: 40%;height:50px;" class="custom txt2"><a href="#" class="txt2">SignUp
-                                </a></button>
-                            <h5 class="txt2">* By clicking on Signup you agree to the terms and conditions *</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container-fluid">
+      <li class="nav-item">
+        <img src="./Img/logo5.jpg" style="
+              width: 60px;
+              height: 60px;
+              border-radius: 3px;
+              background-color: #ddd;
+            " />
+      </li>
+      <br /><br /><br />
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <p class="nav-link active nav1" aria-current="page">
+              Karibu Groceries Limited .
+            </p>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <button class="btn btn-outline-primary txt2" style="float: left; height: 50px" type="submit">
+            <a href="index.html" style="text-decoration: none; color: azure">Home</a>
+          </button>
+        </form>
+      </div>
     </div>
-    <footer class="page-footer font-small blue pt-4 ">
-        <div class="container-fluid text-center text-md-left ">
-            <div class="row">
-                <div class="col-md-2 mt-md-0 mt-3">
-                    <div>
-                        <img src="./Img/logo5.jpg" class="card-img-top"
-                            style="width:50px; height:50px; border-radius: 10px;" alt="Me In Class on Day on3">
-                    </div>
-                </div>
-                <div class=" col-md-10 mt-md-0 mt-3 footer-copyright text-center py-3 textcontent">© 2022 Copyright:
-                    Karibu Groceries LTD
-                </div>
+  </nav>
 
-            </div>
+  <div class="container" id="blog-container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="main custom1">
+          <h2 class="txt1">Sign up Page</h2>
+          <div class="signup">
+            <form class="needs-validation" name="registration" novalidate>
+              <div class="row">
+                <div class="col col-md-6" style="margin-right: 0px; border-right: 0px">
+                  <div>
+                    <div class="align">
+                      <label class="form-label">1st Name</label>
+                      <input type="text" name="fname" placeholder="* First Name " required size="22"
+                        onblur="userval(5,22)" />
+                      <!-- <div class="invalid-feedback" style="border: 0px; padding: 0px; font-size: 15px">
+                        Valid username is required.
+                      </div> -->
+                    </div>
+                    <div class="align">
+                      <label class="form-label">2nd Name</label>
+                      <input type="text" name="sname" placeholder="* Second Name" required size="22"
+                        onblur="userval1(5,22)" />
+                    </div>
+                    <div class="align">
+                      <label class="form-label">Gender</label>
+                      <input type="text" name="gender" placeholder="*Male / Female" required size="7" id="gndr"
+                        onblur="userval5(3,8)" />
+                    </div>
+                    <div class="align">
+                      <label class="form-label">NIN</label>
+                      <input type="text" name="userid2" placeholder="* National Id Number (NIN)" required size="12"
+                        id="nin" onblur="userval2(5,12)" />
+                    </div>
+                    <div class="align">
+                      <label class="form-label">E-mail</label>
+                      <input type="email" name="email" placeholder="* Email-address" required id="email"
+                        onblur="val_email()" />
+                      <!-- <div class="invalid-feedback" oninvalid="">
+                        Valid username is required.
+                      </div> -->
+                    </div>
+                    <div class="align">
+                      <label class="form-label" style="padding-left: 10px">User role</label>
+                      <select name="urole" onblur="role()">
+                        <option value="Default">Please select a Role</option>
+                        <option value="sa">Sales Agent</option>
+                        <option value="ma">Manager</option>
+                        <option value="dr">Director</option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
+                <div class="col col-md-6">
+                  <div>
+                    <div class="align">
+                      <label class="form-label">Username</label>
+                      <input type="text" name="usrname" required="" placeholder="* User name" size="22"
+                        onblur="userval4(5,22)" />
+                    </div>
+                    <div class="align"><label class="form-label">Tel:</label>
+                      <input type="text" name="telno" placeholder="* Telephone no." required onblur="tel()" />
+                    </div>
+                    <div class="align">
+                      <label class="form-label">Branch</label>
+                      <select name="branch" onblur="sbranch()" required>
+                        <option value="Default">
+                          Please select a Branch to work from.
+                        </option>
+                        <option value="mg">Maganjo</option>
+                        <option value="ma">Matugga</option>
+                        <option value="na">Not Applicable</option>
+                      </select>
+                    </div>
+                    <div class="align">
+                      <label class="form-label">Password</label>
+                      <input type="password" required="" placeholder="* Password" name="passid" size="12"
+                        onblur="userpass(6,20)" />
+                    </div>
+                    <div class="align">
+                      <label class="form-label">Confirm Password*</label>
+                      <input type="password" required="" placeholder="* Confirm Password" name="passid1" size="12"
+                        onblur="userpass1(6,20),passvalid()" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <button style="width: 40%; height: 50px" class="custom txt2" type="submit">
+                  <a href="#" class="txt2">SignUp </a>
+                </button>
+                <h5 class="txt2" style="color: black">
+                  * By clicking on Signup you agree to the terms and
+                  conditions *
+                </h5>
+              </div>
+            </form>
+          </div>
         </div>
-    </footer>
-    <script src="js/signup.js"></script>
-    <script src="css/bootstrap/js/bootstrap.bundle.js"></script>
+      </div>
+    </div>
+  </div>
+  <footer class="page-footer font-small blue pt-4">
+    <div class="container-fluid text-center text-md-left">
+      <div class="row">
+        <div class="col-md-2 mt-md-0 mt-3">
+          <div>
+            <img src="./Img/logo5.jpg" class="card-img-top" style="width: 50px; height: 50px; border-radius: 10px"
+              alt="Me In Class on Day on3" />
+          </div>
+        </div>
+        <div class="col-md-10 mt-md-0 mt-3 footer-copyright text-center py-3 textcontent">
+          © 2022 Copyright: Karibu Groceries LTD
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="js/signup.js"></script>
+  <script src="css/bootstrap/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
